--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: gxde-dock-weather
 Section: utils
 Priority: optional
 Maintainer: gfdgd xi <3025613752@qq.com>
-Build-Depends: debhelper-compat (= 13), qt4-qmake
+Build-Depends: debhelper-compat (= 13), qt5-qmake, dde-dock-dev, libdtkwidget-dev, libdtkcore-dev
 Standards-Version: 4.5.1
 Homepage: https://gitee.com/GXDE-OS/gxde-dock-weather
 Rules-Requires-Root: no
@@ -10,6 +10,6 @@ Rules-Requires-Root: no
 Package: gxde-dock-weather
 Architecture: any
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, dde-dock, libdtkwidget5, libdtkcore5
 Description: GXDE Dock weather forcast plugin. 
 
